fix: all page-shell-filters children 100% width on mobile

--- a/frontend/src/pages/Collection/Collection.scss
+++ b/frontend/src/pages/Collection/Collection.scss
@@ -1,2 +1,2 @@
 @use '../../styles/variables' as *;
-@media(max-width:768px){.page-shell-filters{flex-direction:column}.page-shell-filters .input-group{width:100%}.page-shell-filters .form-select{width:100%}}
+@media(max-width:768px){.page-shell-filters{flex-direction:column}.page-shell-filters>*{width:100%}}
